# nebius-academy

./: README.md  pyproject.toml
s1_genai_applications/week4_practice_session/: week4_practice_session.ipynb
s1_llm_engineering_essentials/: Tokenization_task_student.ipynb
s1_llm_engineering_essentials/week1_practice_session/: Week1_practice_session.ipynb
